fixed g5-overlay z-index to include wp sidebar and admin bar

--- a/platforms/wordpress/gantry5/admin/css-compiled/wordpress-admin.css
+++ b/platforms/wordpress/gantry5/admin/css-compiled/wordpress-admin.css
@@ -46,6 +46,9 @@ body.gantry5 #g5-container .search {
   color: inherit;
   font-size: inherit;
 }
+body.gantry5 #g5-container .g5-dialog {
+  z-index: 99999;
+}
 body.gantry5 form {
   margin-bottom: 1em;
 }
