--- a/platforms/wordpress/gantry5/admin/scss/wordpress-admin/_core.scss
+++ b/platforms/wordpress/gantry5/admin/scss/wordpress-admin/_core.scss
@@ -57,6 +57,10 @@ body.gantry5 {
             font-size: inherit;
         }
 
+        .g5-dialog {
+            z-index: 99999;
+        }
+
     }
 
     form {
